[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iamgraph"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest ~= 8.0.2",
    "pytest-watch ~= 4.2.0",
    "mypy ~= 1.8.0",
    "ruff ~= 0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["iamgraph"]

[tool.mypy]
implicit_reexport = true
strict = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
